update finish intro 4

--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -146,7 +146,7 @@ This is reinforced by the very low computational cost of the method. The Voronoi
 
 This preliminary study identified a fast method for adsorption enthalpy calculation that can be widely used in screening procedures, but has limited accuracy for quantitative prediction --- this sampling technique assumes that the nodes are close to the real, most favorable, adsorption sites, which is not always true. Or to put it differently, the adsorption sites need to be at the center of the pores, which is only true for structures with pore sizes close to adsorbate size. It raised important questions on the importance of selecting sampling points within the pore space of materials, and we wanted to develop an intermediate technique that is both fast and accurate for the prediction of adsorption enthalpy. For this purpose, we developed and optimized a new sampling technique that focuses the sampling on the surface of the material, which is expected to make up for the main flaws of the Voronoi sampling.
 
-\section{Rapid Adsorption Enthalpy Surface Sampling (RAESS)}
+\section{Rapid Adsorption Enthalpy Surface Sampling (RAESS)}\label{sct:RAESS}
 
 In this section, we describe the development of our surface sampling algorithm, with the goal of being more accurate than Voronoi sampling and faster than Widom insertion. Our initial idea is based on a series of theoretical considerations: (i) the strong adsorption sites are near the surface of the material; (ii) by changing the problem from 3D to 2D sampling we can reduce the complexity; and (iii) the algorithm can scale with the number of unique atoms in the structure (and not with the size of the unit cell), which is efficient because many porous frameworks have high symmetry. The first consideration ensures that this method will be more accurate than a Voronoi sampling, and the last two made us think that a well-optimized code would be fast. To confirm these hypotheses, we will analyze both the accuracy and the speed of this new algorithm and compare them to existing methods.
 
@@ -412,7 +412,7 @@ Finally, although the algorithm in its present form can already be applied in a 
 
 \textbf{Data Availability:} \url{https://github.com/fxcoudert/citable-data/tree/master/154-Ren_ChemSci_2023}
 
-\section{Grid Adsorption Energies Descriptors (GrAED)}
+\section{Grid Adsorption Energies Descriptors (GrAED)}\label{sct:grid}
 
 \subsection{Implementation of an efficient grid algorithm}
 
@@ -504,7 +504,7 @@ Now that we have proven the high accuracy and the efficiency of the GrAED algori
 
 \subsection{Description of the ambient-pressure selectivity}
 
-At first sight, if we look at the left plot of the Figure~\ref{fgr:grid_widom_selectivity_ambient}, the selectivity at ambient pressure seems completely decorrelated to the selectivity at infinite dilution, which would mean that the sampling we have done is completely useless in determining the higher pressure selectivity values. However, the right plot suggests otherwise, the correlation between the logarithm of the selectivity does exist, the complete decorrelation we see at linear scale is actually a phenomenon that only occurs on highly selective materials. This phenomenon is described in detail in the Chapter 2 and corresponds to a selectivity drop experienced by some highly (at infinite dilution) selective materials. To say it simply, the saturation of the most selective sites make the remaining sites way less selective for the xenon/krypton separation for these materials.
+At first sight, if we look at the left plot of the Figure~\ref{fgr:grid_ambient_selectivity}, the selectivity at ambient pressure seems completely decorrelated to the selectivity at infinite dilution, which would mean that the sampling we have done is completely useless in determining the higher pressure selectivity values. However, the right plot suggests otherwise, the correlation between the logarithm of the selectivity does exist, the complete decorrelation we see at linear scale is actually a phenomenon that only occurs on highly selective materials. This phenomenon is described in detail in the chapter 2 and corresponds to a selectivity drop experienced by some highly (at infinite dilution) selective materials. To say it simply, the saturation of the most selective sites make the remaining sites way less selective for the xenon/krypton separation for these materials.
 
 \begin{figure}[ht]
   \centering
@@ -555,14 +555,14 @@ The entropy values can explain why the adsorption free energy of xenon is well c
     \caption{Comparison of the ambient-pressure Xe/Kr exchange Gibbs free energy calculated by GCMC simulations of RASPA with 100,000 cycles and the low-pressure exchange enthalpy (left, in \si{\kilo\joule\per\mole}) and entropy (right, in \si{\kilo\joule\per\mole\per\kelvin}) calculated by the GrAED algorithm (same parameters).}\label{fgr:grid_comp_exc}
 \end{figure}
 
-Now, if we go back to the exchange thermodynamic quantities that are more relevant to our context, we can see a good correlation between the exchange enthalpy at low pressure calculated with GrAED and the exchange Gibbs free energy at ambient pressure calculated by GCMC on Figure~\ref{fgr:grid_comp_exc}. Some discrepancies can be detected around $-10$ and $0$~\si{\kilo\joule\per\mole} of the ambient-pressure exchange free energy, which can also be explained using the exchange entropy that is stable $-0.01$~\si{\kilo\joule\per\mole\per\kelvin} and experiences a peak for structures near the previously mentioned range of ambient-pressure exchange free energy. The overall strong correlation can be explained using the previously identified enthalpic nature of the separation process of xenon from krypton (see Chapter 2). And, the problematic range, where the correlation is weaker, also corresponds to the one associated with a selectivity drop in the Figure~\ref{fgr:G_900K}. These exchange thermodynamic quantities can help distinguish the materials to better model the drop phenomenon, a more quantitative approach will be developed in the next chapter.
+Now, if we go back to the exchange thermodynamic quantities that are more relevant to our context, we can see a good correlation between the exchange enthalpy at low pressure calculated with GrAED and the exchange Gibbs free energy at ambient pressure calculated by GCMC on Figure~\ref{fgr:grid_comp_exc}. Some discrepancies can be detected around $-10$ and $0$~\si{\kilo\joule\per\mole} of the ambient-pressure exchange free energy, which can also be explained using the exchange entropy that is stable $-0.01$~\si{\kilo\joule\per\mole\per\kelvin} and experiences a peak for structures near the previously mentioned range of ambient-pressure exchange free energy. The overall strong correlation can be explained using the previously identified enthalpic nature of the separation process of xenon from krypton (see chapter 2). And, the problematic range, where the correlation is weaker, also corresponds to the one associated with a selectivity drop in the Figure~\ref{fgr:G_900K}. These exchange thermodynamic quantities can help distinguish the materials to better model the drop phenomenon, a more quantitative approach will be developed in the next chapter.
 
 
 \subsubsection{High-temperature quantities}
 
 Although the previous quantities are valuable in modeling the adsorption at ambient pressure, they are still not enough, since they describe a state where the atoms adsorbe on the most attractive sites only. The ambient-pressure state is actually characterized by an adsorption on a more diverse set of sites and with an increasingly important role of the guest--host interaction, which are also the main factors that contribute to the difference in selectivity between both pressure conditions and identified in the previous chapter.
 
-In this section, we introduce a descriptor that better describes the energy distribution in the ambient-pressure case by increasing the weight of the more energetic adsorption sites. To do so the easiest way was to increase the temperature in the Boltzmann averaging for both the Gibbs free energy and the enthalpy defined in equations~\ref{eqads_gibbs} and~\ref{eq:ads_enthalpy}. Many temperatures were tested, and the one that yielded the higher correlation coefficient when comparing the adsorption enthalpies (infinite dilution and ambient pressure) was chosen. 
+In this section, we introduce a descriptor that better describes the energy distribution in the ambient-pressure case by increasing the weight of the more energetic adsorption sites. To do so the easiest way was to increase the temperature in the Boltzmann averaging for both the Gibbs free energy and the enthalpy defined in equations~\ref{eq:ads_gibbs} and~\ref{eq:ads_enthalpy}. Many temperatures were tested, and the one that yielded the higher correlation coefficient when comparing the adsorption enthalpies (infinite dilution and ambient pressure) was chosen. 
 
 A temperature of \SI{900}{\kelvin} was found to be the optimal temperature to describe an ambient-pressure adsorption enthalpy of xenon across the structures of CoRE MOF 2019, and gives a minimal error (RMSE) of \SI{1.76}{\kilo\joule\per\mole} instead of \SI{2.87}{\kilo\joule\per\mole} for the \SI{298}{\kelvin} case. This improvement impacts the exchange free energy metrics as well as the adsorption enthalpy associated with the separation of xenon from krypton. The exchange Gibbs free energy and the adsorption enthalpy of xenon at ambient pressure are better correlated to the equivalent values at lower pressure and higher temperature (\SI{900}{\kelvin}) than to the \SI{298}{\kelvin} case. These observations support the use of higher temperature averaging to describe the ambient-pressure selectivity.
 
@@ -603,7 +603,7 @@ The Boltzmann weighted distribution consists in assigning a weight $\exp(-\beta 
   \centering
     \includegraphics[width=0.45\textwidth]{figures/3-fastsim/G_2080_vs_enthalpy_std_x_overview.jpg}
     \includegraphics[width=0.45\textwidth]{figures/3-fastsim/G_2080_vs_enthalpy_std_y_overview.jpg}
-        \caption{Comparison of the ambient-pressure Xe/Kr exchange Gibbs free energy calculated by GCMC simulations of RASPA with 100,000 cycles and the standard deviations of the Boltzmann weighted energy distribution of xenon (left) and krypton (right) calculated by the GrAED algorithm at \SI{298}{\kelvin}.}\label{fgr:enthalpy_std}\label{fgr:enthalpy_std}
+        \caption{Comparison of the ambient-pressure Xe/Kr exchange Gibbs free energy calculated by GCMC simulations of RASPA with 100,000 cycles and the standard deviations of the Boltzmann weighted energy distribution of xenon (left) and krypton (right) calculated by the GrAED algorithm at \SI{298}{\kelvin}.}\label{fgr:enthalpy_std}
 \end{figure}
 
 For instance, the standard deviation of the Boltzmann weighted energy distribution is one of the statistical quantities that could be interesting in evaluating the drop of selectivity. In the previous chapter, we identified the diversity of site attractiveness as one of the main factors that could explain the drop in selectivity. The standard deviation of the energies can therefore be useful characterization of the diversity of nature between the different adsorption sites. On the Figure~\ref{fgr:enthalpy_std}, this standard deviation is calculated for both xenon and krypton, and the higher variation of its values is concentrated in a range of values corresponding to the one we identified for the entropy change on one hand but more importantly to the range where the selectivity drop is observed on the Figure~\ref{fgr:G_900K} (between $-10$ and $0$~\si{\kilo\joule\per\mole}). Qualitatively, it is understandable that the standard deviation informs us on the pore diversity which could help characterizing the origins of the selectivity drop; and, the higher the diversity the higher probability of experiencing a selectivity drop. The challenge is then to quantify this probability through a model, a simple theoretical model would never be accurate enough, this is the reason we will be looking into machine learning models in the next chapter.
