--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-\chapter{Towards the next generation of screenings}
+\chapter{Toward the next generation of screenings}
 \vspace*{-1\baselineskip}
 
 \section{Limits of the Current Screening Methodologies}
