--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{inconsolata}
 \usepackage{mathtools}
 \usepackage{amssymb}
+\usepackage{amsbsy}
 \usepackage[frenchmath]{mathastext}
 \usepackage{dsfont}
 \usepackage{graphicx}
@@ -56,6 +57,7 @@
 \usepackage{siunitx}
 \DeclareSIUnit\bar{bar}
 \DeclareSIUnit\atm{atm}
+\DeclareSIUnit\angstrom{\text{\AA}}
 \newcommand{\revadd}[1]{{#1}}
 \newcommand{\revrem}[1]{{#1}}
 % Fix from https://tex.stackexchange.com/a/24278/225087
