--- a/thesis.bib
+++ b/thesis.bib
@@ -3314,3 +3314,60 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {The random subspace method for constructing decision forests},
 	journal = {IEEE Trans. Pattern Anal. Machine Intell.}
 }
+@inproceedings{drucker1997improving,
+  title={Improving regressors using boosting techniques},
+  author={Drucker, Harris},
+  booktitle={Icml},
+  volume={97},
+  pages={107--115},
+  year={1997},
+  organization={Citeseer}
+}
+@incollection{schapire2013explaining,
+  title={Explaining adaboost},
+  author={Schapire, Robert E},
+  booktitle={Empirical inference},
+  pages={37--52},
+  year={2013},
+  publisher={Springer}
+} 
+@article{Freund_1997,
+	doi = {10.1006/jcss.1997.1504},
+	url = {https://doi.org/10.1006%2Fjcss.1997.1504},
+	year = 1997,
+	month = {aug},
+	publisher = {Elsevier {BV}},
+	volume = {55},
+	number = {1},
+	pages = {119--139},
+	author = {Yoav Freund and Robert E Schapire},
+	title = {A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting},
+	journal = {Journal of Computer and System Sciences}
+}
+@inproceedings{schapire1998improved,
+  title={Improved boosting algorithms using confidence-rated predictions},
+  author={Schapire, Robert E and Singer, Yoram},
+  booktitle={Proceedings of the eleventh annual conference on Computational learning theory},
+  pages={80--91},
+  year={1998}
+}
+@article{mason1999boosting,
+  title={Boosting algorithms as gradient descent},
+  author={Mason, Llew and Baxter, Jonathan and Bartlett, Peter and Frean, Marcus},
+  journal={Advances in neural information processing systems},
+  volume={12},
+  year={1999}
+}
+@article{Friedman2002,
+  doi = {10.1016/s0167-9473(01)00065-2},
+  url = {https://doi.org/10.1016/s0167-9473(01)00065-2},
+  year = {2002},
+  month = feb,
+  publisher = {Elsevier {BV}},
+  volume = {38},
+  number = {4},
+  pages = {367--378},
+  author = {Jerome H. Friedman},
+  title = {Stochastic gradient boosting},
+  journal = {Computational Statistics {\&} Data Analysis}
+}
