--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -63,7 +63,7 @@ The definition of accessibility defined by the Zeo++ software was used in a scre
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.5\textwidth]{figures/3-fastsim/Simon_voronoi.jpeg}
-  \caption{Voronoi network model of void space (2D caricature). The unit cell of a toy material is shown. Red circles represent atoms of the material; accessible and inaccessible Voronoi nodes are blue squares and green triangles, respectively. The black lines are the edges in the periodic Voronoi graph that model the void space. Taken from Ref.~\cite{Simon_2015}}\label{fgr:simon_voro}
+  \caption{Voronoi network model of void space (2D caricature). The unit cell of a toy material is shown. Red circles represent atoms of the material; accessible and inaccessible Voronoi nodes are blue squares and green triangles, respectively. The black lines are the edges in the periodic Voronoi graph that model the void space. Reprinted with permission from Ref.~\cite{Simon_2015}. Copyright 2015 American Chemical Society.}\label{fgr:simon_voro}
 \end{figure}
 
 Starting from the initial idea of Voronoi sampling, we want to question the relevance of using a direct average of the interaction energies instead of a Boltzmann averaging in describing the adsorption enthalpy. To better understand the strengths and weaknesses of this methodology, we compared different ways of approximating adsorption enthalpies using the Voronoi sampling with more accurate infinite dilution and ambient-pressure xenon adsorption enthalpies using Widom insertions and GCMC for a 20:80 Xe/Kr mixture at \SI{1}{\atm} and \SI{298}{\kelvin}.
