--- a/4-ml.tex
+++ b/4-ml.tex
@@ -97,7 +97,7 @@ The first term of the above-written sum corresponds to a bias error, because it 
   \centering
     \includegraphics[width=0.45\textwidth]{figures/4-ml/Bias_and_variance_contributing_to_total_error.svg.png}
     \includegraphics[width=0.45\textwidth]{figures/4-ml/Overfitted_Data.png}
-    \caption{On the left, theoretical relation between the bias, variance and total errors and the model complexity taken from \href{https://en.wikipedia.org/wiki/File:Bias_and_variance_contributing_to_total_error.svg}{Wikimedia Commons} under above \href{https://creativecommons.org/licenses/by-sa/4.0}{CC BY-SA 4.0} license. This is an illustration of what happens for instance on the left plot (taken from \href{https://en.wikipedia.org/wiki/File:Overfitted_Data.png}{Wikimedia Commons} under a \href{https://creativecommons.org/licenses/by-sa/4.0}{CC BY-SA 4.0} license), when considering different degrees of polynomials. The lower degree linear function is more generalizable that the biased high degree polynomial that fits perfectly the data.}\label{fgr:bias_variance}
+    \caption{On the left, theoretical relation between the bias, variance and total errors and the model complexity taken from \href{https://en.wikipedia.org/wiki/File:Bias_and_variance_contributing_to_total_error.svg}{Wikimedia Commons} under absorbers \href{https://creativecommons.org/licenses/by-sa/4.0}{CC BY-SA 4.0} license. This is an illustration of what happens for instance on the left plot (taken from \href{https://en.wikipedia.org/wiki/File:Overfitted_Data.png}{Wikimedia Commons} under a \href{https://creativecommons.org/licenses/by-sa/4.0}{CC BY-SA 4.0} license), when considering different degrees of polynomials. The lower degree linear function is more generalizable that the biased high degree polynomial that fits perfectly the data.}\label{fgr:bias_variance}
 \end{figure}
 
 In general, if the model is very complex in comparison to the amount of data we have, we would fit too closely to the data and have a very high change to overfit. The opposite is also true, a simplistic model would yield to a poor bias error and the model would be underfit. This principle is represented on the Figure~\ref{fgr:bias_variance} and should guide us in the design of a new ML model.
@@ -149,8 +149,8 @@ The most used method is the k-fold cross-validation technique which consists in 
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.6\textwidth]{figures/4-ml/1280px-K-fold_cross_validation_EN.svg.png}
-    \caption{A k-folds cross-validation illustration adapted from \href{https://en.wikipedia.org/wiki/File:1280px-K-fold_cross_validation_EN.svg.png}{Wikimedia Commons} under a \href{https://creativecommons.org/licenses/by-sa/4.0}{CC BY-SA 4.0} license. \todo{redo if time}}\label{fgr:kfold}
+    \includegraphics[width=0.8\textwidth]{figures/4-ml/cross-validation.pdf}
+    \caption{Illustration of a k-fold cross-validation. At each step, the machine learning model learns from the training set and is tested on the validation set. The average performance on all validation sets gives an approximation of the generalization error.}\label{fgr:kfold}
 \end{figure}
 
 Other cross-validation techniques exist and are used in specific cases, for example the stratification cross-validation consists in ensuring the same repartition of the labels $y_i$ in each subset, which is useful in classification problems. We can also make the validation process even more exhaustive by increasing the k in the k-fold validation. However it requires k training of the models, which increase the computation time required. When increase to the maximum k is equal to the size of the training set and the method is called leave-one-out cross-validation. Finally, for time series, the cross-validation technique usually requires to sort the data according to the time history so that the training set is always prior to the validation set, which creates a whole new approach to cross-validation. The core idea of cross-validation is to find multiple training/validation splits to evaluate the model from more than one point of view, and different strategies exist depending on the training problem before us.
@@ -165,9 +165,8 @@ Tree-based models are usually used in classification problems where depending on
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.45\textwidth]{figures/4-ml/tree_example.png}
-  \includegraphics[width=0.45\textwidth]{figures/4-ml/tree_regions_example.png}
-  \caption{Illustration of the decision tree and the region splitting performed by a CART\autocite{Breiman_2017} algorithm, taken from the book ``Elements of Statistical Learning'' \cite{Hastie_2009}. \todo{refaire le graphe ?}}\label{fgr:tree}
+  \includegraphics[width=0.8\textwidth]{figures/4-ml/decision_tree.pdf}
+  \caption{Illustration of the decision tree and the region splitting performed by a CART\autocite{Breiman_2017} algorithm. Adapted from an illustration of the book ``Elements of Statistical Leanrning''~\cite{Hastie_2009}.}\label{fgr:tree}
 \end{figure}
 
 The CART\autocite{Breiman_2017} algorithm developed by Breiman et al. is usually presented as the archetype of a decision tree model. The algorithm is pretty straightforward to understand, three steps are required: (i) Examine every split allowed on each feature $C_i$, (ii) select and use the best split according to a loss function (squared error or absolute error usually), and (iii) stop splitting a node when a stopping rule is satisfied (e.g. minimum samples split).\autocite{Dension_1998} We could split indefinitely the decision tree so that each data point has its own region, but this would be a textbook case of overfitting, any new data point would never be correctly predicted with such a model. To prevent this from happening, the decision tree has a regularization parameter called minimum samples split $n\e{min}$ that only allows a further split; if the node contains less than a given number $n\e{min}$, then it is necessarily a terminal node. The decision trees are known to be very prone to overfitting, another useful regularization parameter can be used to prevent an ever-growing tree is the maximum depth of the tree,  which can also stop the iterative process of tree growing. Finally, to further regularize the tree, a process called tree pruning simplifies the tree and outputs the final model. We won't go into the details of tree pruning as it is not the main subject (see Ref.~\cite{Hastie_2009} for further details). The final tree $f\e{tree}$ can be expressed as a function of the different regions $R_1,\ldots,R_M$ carved by the splitting process:
@@ -551,7 +550,6 @@ To better understand the intuition behind this selectivity drop, we used the SHA
 
 \subsubsection{Explainable AI}
 
-\todo{Present the explainable AI}
 The final model is trained on the predefined training set using XGBoost with the fine-tuned hyperparameters. By testing it on the test set, we measure the accuracy of our approach, however, it is interesting to extract chemical insight into the hidden relationship between the predicted value and the descriptors, to better understand the thermodynamic origins of the performance. In this work, we used the Shapley values,\autocite{shapley1953value} a game theory concept developed by Shapley in 1953, to measure the contribution of each descriptor in the predicted value. This tool is used locally to understand for a given structure how their characteristics had contributed to the prediction. To draw structure-property relationships, we would need to use a global interpretation methods such as the SHapley Additive exPlanations (SHAP) method thoroughly detailed in the online book \emph{Interpretable Machine Learning} of Christoph Molnar.\autocite{molnar2020interpretable} The SHAP tool developed by Lundberg and Lee~\autocite{SHAP} is based on a faster algorithm adapted to tree-based ML models like gradient boosting, TreeSHAP, and integrates useful global interpretation modules like SHAP feature importance and dependence plot.
 
 \subsection{Global interpretability}
