--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -6,11 +6,11 @@
 \chapter{Xenon and krypton transport properties}
 \vspace*{-1\baselineskip}
 
-\section{Current state of the art}
-
-Experiment? \todo{reprendre la review daglar}
+\section{Diffusion coefficient modeling}
 
 \subsection{Molecular dynamics}
+
+Experiment? \todo{reprendre la review daglar}
 
 \subsection{Transition state theory}
 
